Fixed small UX issue, so if we click on an already selected skill it will show the details again and not unselect. If the fallback skill details are shown, disable the scrollbar of the main fallback wrapper and save the scrollTop to revert to it, after the details were closed.

--- a/style/fallback/view/skills/fallback-skill-details.scss
+++ b/style/fallback/view/skills/fallback-skill-details.scss
@@ -19,4 +19,18 @@
     opacity: 1;
     pointer-events: initial;
   }
+
+  .fallback-skill-details-close-button {
+    position: absolute;
+    top: 5vmin;
+    right: 5vmin;
+
+    background-color: #f00;
+
+    width: 4rem;
+    max-width: 8vmax;
+
+    height: 4rem;
+    max-height: 8vmax;
+  }
 }
